--- a/css/common.css
+++ b/css/common.css
@@ -1,1 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jua&family=Noto+Sans+KR&display=swap");
+
+article {
+  padding: 10px 0 10px 0;
+}
