--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -98,12 +98,11 @@ aside h2 {
 }
 
 .profile-image {
-  background-image: url("https://images.unsplash.com/photo-1618979251882-0b40ef3617f0?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("/images/hippo.jpeg");
   background-size: 100%;
   background-position: center 100%;
   width: var(--aside-width);
   height: var(--aside-width);
-
   text-indent: -1000rem;
 }
 
@@ -121,6 +120,8 @@ ol.contents li:not(:last-child) {
 }
 
 ol.contents li a {
+  display: inline-block;
+  padding: 5px 0 5px 0;
   text-decoration: none;
   color: var(--font-default-color);
 }
@@ -151,4 +152,55 @@ footer p {
 
   --divider-color: #efefef;
   --font-default-color: #333;
+}
+
+#gallery-article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  width: 50%;
+  /*height: 100%;*/
+}
+
+.grid-container > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.comment-item {
+  padding: 10px;
+}
+
+.movie-thumbnail .drama-thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 100%;
+}
+
+#movie-article #drama-article {
+  width: 100%;
 }
