--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -165,9 +165,7 @@ footer p {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 10px;
-  width: 50%;
-  /*height: 100%;*/
+  width: 80%;
 }
 
 .grid-container > div {
@@ -187,6 +185,7 @@ footer p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  aspect-ratio: 1 / 1;
 }
 
 .comment-item {
