--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -98,7 +98,7 @@ aside h2 {
 }
 
 .profile-image {
-  background-image: url("/images/hippo.jpeg");
+  background-image: url("./images/hippo.jpeg");
   background-size: 100%;
   background-position: center 100%;
   width: var(--aside-width);
